# QuickAnnotator

./: .dockerignore  .gitignore  .readthedocs.yaml  Dockerfile  INTEGRATION_SUMMARY.md  LICENSE.txt  QA.py  QA_api.py  QA_config.py  QA_db.py  QA_html.py  QA_pool.py  QA_utils.py  QA_worker.py  README.md  docker-compose.yml  grafana_dashboard.json  main.py  make_embed.py  make_output_unet_cmd.py  make_patches_for_embed.py  make_superpixel.py  make_superpixel_dl.py  pyproject.toml  requirements.txt  requirements_cpuonly.txt  train_ae.py  train_model.py  unet.py
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: feature_request.md  general_issue.md
.github/workflows/: build_v2_docker_image.yml
cli/: extract_tiles_from_wsi_openslide.py  import_annotations_cli.py  qa_cli_tester.py  rest_workflow_example_cli.py
config/: config.ini  logging.ini
cuda_10/: Dockerfile  requirements.txt
cuda_11/: Dockerfile  requirements.txt
cuda_12/: Dockerfile  requirements.txt
deployment/: .env  Dockerfile  dev.env  docker-compose.dev.yaml  docker-compose.yaml  local_cluster_config.yaml  multi_node_cluster_config.yaml  requirements.txt
docs/: requirements.txt
docs/source/: conf.py  developer_guide.md  index.md  installation.md  unit_testing.md  usage.md
quickannotator/: __main__.py  constants.py  dsa_export.py  dsa_sdk.py  populate_db.ipynb  tile_server.ipynb
quickannotator/api/: __init__.py
quickannotator/api/v1/annotation/: __init__.py  helper.py  models.py  routes.py  utils.py
quickannotator/api/v1/annotation_class/: __init__.py  helper.py  models.py  routes.py  utils.py
quickannotator/api/v1/image/: __init__.py  helper.py  models.py  routes.py  utils.py
quickannotator/api/v1/misc/: __init__.py  routes.py
quickannotator/api/v1/notification/: __init__.py
quickannotator/api/v1/object_class/: __init__.py
quickannotator/api/v1/project/: __init__.py  models.py  routes.py  utils.py
quickannotator/api/v1/ray/: __init__.py  models.py  routes.py  utils.py
quickannotator/api/v1/setting/: __init__.py
quickannotator/api/v1/settings/: __init__.py
quickannotator/api/v1/tile/: __init__.py  helper.py  helpers.py  models.py  routes.py
quickannotator/api/v1/utils/: coordinate_space.py  ray_cluster.py  shared_crud.py
quickannotator/client/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
quickannotator/client/src/: index.css  interfaces.ts  main.tsx  types.ts
quickannotator/client/src/components/: IdNameList.tsx  TrainingStatusButton.css  TrainingStatusButton.tsx  annotationExportModal.tsx  annotationList.tsx  classesPane.tsx  confirmationModal.tsx  groundTruthPane.tsx  legend.tsx  navigation.tsx  newClassModal.tsx  notificationCenter.tsx  predictionsPane.tsx  toolbar.tsx  viewportMap.tsx  viewportMapOld.tsx  viewportPane.tsx  viewportPaneFeatureApproach.tsx  viewportPaneNew.tsx  viewportPaneOld.tsx
quickannotator/client/src/components/exportAnnotationsModal/: exportAnnotationsModal.tsx
quickannotator/client/src/components/fileDropUploader/: fileDropUploader.css  fileDropUploader.tsx
quickannotator/client/src/helpers/: api.ts  config.ts  config.tsx  helpers.ts  toasts.ts
quickannotator/client/src/routes/: AnnotationPage.tsx  LandingPage.tsx  ProjectPage.tsx  annotationPage.tsx  landingPage.tsx  project.css  projectPage.tsx  root.tsx
quickannotator/client/src/types/: annotationClass.ts  annotations.ts  image.ts  outlet.ts  project.ts
quickannotator/client/src/utils/: customTooltip.tsx  map.ts  map_tiles.ts  useAsyncGuard.ts
quickannotator/config/: __init__.py  config.ini
quickannotator/cuda_11_dev/: Dockerfile
quickannotator/db/: __init__.py  colors.py  fsmanager.py  helper.py  logging.py  models.py  utils.py
quickannotator/db/crud/: annotation.py  annotation_class.py  image.py  misc.py  project.py  tile.py
quickannotator/dl/: 1-dataloader_work.ipynb  2-dataloader_work.ipynb  4-dataloader_work memcache.ipynb  5-ray_actor_work.ipynb  6-direct_work.ipynb  7.2-dbtest-working.ipynb  7.3-dbtest-works.ipynb  7.4-dbtest-works.ipynb  7.5-dbtest-multiproc-rewrite-db-v2.py  7.5-dbtest-multiproc.ipynb  7.5-dbtest-multiproc.py  8-image-load-test.ipynb  database.py  dataloader_work.ipynb  dataset.py  dl_config.py  example-train-infer-notebook.ipynb  inference.py  jackson_ray_actor.ipynb  large_image_openslide.ipynb  loss.py  mask_generator.py  model.py  ray_jackson.py  training.py  utils.py
quickannotator/dl/research_work/baseline/: 3-memcache_work.ipynb  4-dataloader_work memcache.ipynb  5-ray_actor_work.ipynb  6-direct_work.ipynb  7-dbtest.ipynb  7.1-dbtest-working.ipynb  7.4-dbtest-works-infer2.ipynb  7.5-dbtest-multiproc-rewrite infer.py  7.5-dbtest-multiproc-rewrite.py  QA_fractional_compute.xlsx  database.py  example-train-infer-notebook.ipynb
quickannotator/dl/research_work/improved-v1/: datasets.py  losses.py  models.py  train.py  utils.py
quickannotator/grafana/: logs_postgres.json  logs_sqlite.json  utils.py
quickannotator/mounts/nas_read/fibi/: populate_fibi.ipynb
quickannotator/prototyping/: polygon_downsample_test.ipynb  ray_state_api.ipynb  split_annotations_by_class.ipynb  time_annotation_query.ipynb
quickannotator/tests/: conftest.py
quickannotator/tests/functional/: test_annotation_classes.py  test_annotations.py  test_images.py  test_misc.py  test_projects.py  test_ray.py  test_tiles.py
quickannotator/tests/unit/: test_cache.py  test_crud.py  test_fsmanager.py  test_logger.py  test_tilespace.py
static/css/: angular-tour.css  annotator.css  imageselection.css  logs.css  modal.css  style.css
static/js/: angular-cookies.min.js  angular-cookies.min.js.map  angular.min.js.map  annotation-vars.js  canvas2image.js  graphNode.js  imageFilter.js  indexScript.js  projectPageScript.js  projects.js  qa-utils.js
templates/: annotation-main.js  annotation-tool.js  annotation-utils.js  annotation.html  embed-main.js  embed.html  error.html  images-main.js  images.html  index.html  jobs.html  sampleimages.html
(+9 files in other folders)
