[build-system]
requires = ["setuptools >= 64", "setuptools_scm >= 8", "wheel"]
build-backend = "setuptools.build_meta"

# ----------------------------------------------------------------------------------
[project]
name = "quickannotator"
license = {file = "LICENSE.txt"}
authors = [{name = "Andrew Janowczyk"}]
maintainers = [{name = "Jackson Jacobs"}, {name = "Nan Li"}]
description = "Quick Annotator is an open-source digital pathology annotation tool."
readme = {file = "README.md", content-type = "text/markdown"}
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Digital Pathology",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Utilities",
    "Operating System :: Unix"
]

requires-python = ">=3.8"
dependencies = [
    "Flask~=3.0.3",
    "SQLAlchemy~=2.0.35",
    "GeoAlchemy2~=0.15.2",
    "Werkzeug~=3.0.4",
    "waitress~=3.0.0",
    "Flask-Caching~=2.3.0",
    "marshmallow~=3.22.0",
    "flask-smorest~=0.44.0",
    "marshmallow-sqlalchemy~=1.1.0",
    "openslide-python~=1.3.1",
    "numpy~=1.22",
    "umap-learn==0.5.1",
    "geojson",
    "shapely",
    "ray[default,train]~=2.10.0",
    "large-image~=1.30.1",
    "large-image-source-openslide~=1.30.1",
    "psycopg2-binary~=2.9.10",
    "pymemcache~=4.0.0",
    "albumentations",
    "torch",
    "torchvision",
    "segmentation-models-pytorch~=0.4.0",
    "opencv-python-headless~=4.11.0",
    "tqdm",
    "ipykernel",
    "pytest~=8.3.4",
    "pytest-cov~=6.0.0",
    "matplotlib~=3.10.1",
    "tensorboard~=2.19.0",
    "torchsummary!~=1.5.1"

]
dynamic = ["version"]

# ----------------------------------------------------------------------------------
[project.urls]
Homepage = "https://github.com/choosehappy/QuickAnnotator"

# ----------------------------------------------------------------------------------
[project.scripts]
run_module = "quickannotator.__main__:main"

# ----------------------------------------------------------------------------------
[tool.setuptools_scm]
version_file = "quickannotator/_version.py"

# ----------------------------------------------------------------------------------
[tool.pytest.ini_options]
addopts = "-v"

# ----------------------------------------------------------------------------------
[tool.coverage.run]
source = ["quickannotator"]

# ----------------------------------------------------------------------------------
[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if MYPY:",
  "except ImportError:",
]
