[build-system]
requires = ["setuptools >= 64", "setuptools_scm >= 8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quickannotator"
license = {file = "LICENSE.txt"}
version = "0.1.0"
authors = [{name = "Andrew Janowczyk"}]
maintainers = [{name = "Jackson Jacobs"}, {name = "Nan Li"}]
description = "Quick Annotator is an open-source digital pathology annotation tool."
readme = {file = "README.md", content-type = "text/markdown"}
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Digital Pathology",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Utilities",
    "Operating System :: Unix"
]

requires-python = ">=3.10"
dependencies = [
    "albumentations>=2.0.8",
    "eralchemy[pygraphviz]~=1.5.0",
    "flask~=3.0.3",
    "flask-caching~=2.3.0",
    "flask-smorest~=0.44.0",
    "gdal==3.4.1",
    "geoalchemy2~=0.15.2",
    "geojson>=3.2.0",
    "ipykernel>=6.30.1",
    "large-image~=1.30.1",
    "large-image-source-openslide~=1.30.1",
    "marshmallow~=3.22.0",
    "marshmallow-sqlalchemy~=1.1.0",
    "matplotlib~=3.10.1",
    "numpy~=1.22",
    "opencv-python-headless~=4.11.0",
    "openslide-python~=1.3.1",
    "psycopg2-binary~=2.9.10",
    "pymemcache~=4.0.0",
    "pytest~=8.3.4",
    "pytest-cov~=6.0.0",
    "ray[default,train]~=2.49.1",
    "segmentation-models-pytorch==0.5.0",
    "shapely>=2.1.1",
    "sqlalchemy~=2.0.35",
    "tensorboard~=2.19.0",
    "torchsummary~=1.5.1",
    "tqdm>=4.67.1",
    "ujson>=5.11.0",
    "umap-learn==0.5.1",
    "waitress~=3.0.0",
    "werkzeug~=3.0.4",
]

# ----------------------------------------------------------------------------------
[project.urls]
Homepage = "https://github.com/choosehappy/QuickAnnotator"

# ----------------------------------------------------------------------------------
[project.scripts]
quickannotator = "quickannotator.__main__:main"

# ----------------------------------------------------------------------------------
[tool.setuptools]
packages = ["quickannotator"]

# ----------------------------------------------------------------------------------
[tool.setuptools_scm]
version_file = "quickannotator/_version.py"

# ----------------------------------------------------------------------------------
[tool.pytest.ini_options]
addopts = "-v"

# ----------------------------------------------------------------------------------
[tool.coverage.run]
source = ["quickannotator"]

# ----------------------------------------------------------------------------------
[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if MYPY:",
  "except ImportError:",
]

[tool.distutils.egg_info]
egg_base = "../"
